--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_filesystem_scenarios.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_filesystem_scenarios.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.14.0 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 09 Nov 2020 10:28:13 GMT
+      - Fri, 19 Feb 2021 01:34:47 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11998'
+      - '11990'
     status:
       code: 200
       message: OK
@@ -65,9 +65,9 @@ interactions:
       ParameterSetName:
       - -n -g -o
       User-Agent:
-      - AZURECLI/2.14.0 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -79,7 +79,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Mon, 09 Nov 2020 10:28:15 GMT
+      - Fri, 19 Feb 2021 01:34:47 GMT
       expires:
       - '-1'
       pragma:
@@ -106,12 +106,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs exists
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -n --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Mon, 09 Nov 2020 10:28:15 GMT
+      - Fri, 19 Feb 2021 01:34:48 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -119,14 +123,14 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>ContainerNotFound</Code><Message>The
-        specified container does not exist.\nRequestId:bb85e0ac-601e-0022-6183-b69676000000\nTime:2020-11-09T10:28:18.2281238Z</Message></Error>"
+        specified container does not exist.\nRequestId:fd224811-401e-003b-355f-062df6000000\nTime:2021-02-19T01:34:50.8235818Z</Message></Error>"
     headers:
       content-length:
       - '225'
       content-type:
       - application/xml
       date:
-      - Mon, 09 Nov 2020 10:28:17 GMT
+      - Fri, 19 Feb 2021 01:34:50 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-error-code:
@@ -143,16 +147,20 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs create
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -n --public-access --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-blob-public-access:
       - blob
       x-ms-date:
-      - Mon, 09 Nov 2020 10:28:18 GMT
+      - Fri, 19 Feb 2021 01:34:50 GMT
       x-ms-version:
       - '2020-02-10'
     method: PUT
@@ -164,11 +172,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 09 Nov 2020 10:28:18 GMT
+      - Fri, 19 Feb 2021 01:34:51 GMT
       etag:
-      - '"0x8D8849A2D838D4B"'
+      - '"0x8D8D4768D8A8DB1"'
       last-modified:
-      - Mon, 09 Nov 2020 10:28:19 GMT
+      - Fri, 19 Feb 2021 01:34:51 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -183,12 +191,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs exists
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -n --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Mon, 09 Nov 2020 10:28:20 GMT
+      - Fri, 19 Feb 2021 01:34:52 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -200,11 +212,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 09 Nov 2020 10:28:21 GMT
+      - Fri, 19 Feb 2021 01:34:52 GMT
       etag:
-      - '"0x8D8849A2D838D4B"'
+      - '"0x8D8D4768D8A8DB1"'
       last-modified:
-      - Mon, 09 Nov 2020 10:28:19 GMT
+      - Fri, 19 Feb 2021 01:34:51 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-public-access:
@@ -233,12 +245,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -n --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Mon, 09 Nov 2020 10:28:21 GMT
+      - Fri, 19 Feb 2021 01:34:53 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -250,11 +266,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 09 Nov 2020 10:28:21 GMT
+      - Fri, 19 Feb 2021 01:34:53 GMT
       etag:
-      - '"0x8D8849A2D838D4B"'
+      - '"0x8D8D4768D8A8DB1"'
       last-modified:
-      - Mon, 09 Nov 2020 10:28:19 GMT
+      - Fri, 19 Feb 2021 01:34:51 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-public-access:
@@ -283,16 +299,20 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs create
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -n --public-access --connection-string
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-blob-public-access:
       - container
       x-ms-date:
-      - Mon, 09 Nov 2020 10:28:23 GMT
+      - Fri, 19 Feb 2021 01:34:54 GMT
       x-ms-version:
       - '2020-02-10'
     method: PUT
@@ -304,11 +324,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 09 Nov 2020 10:28:24 GMT
+      - Fri, 19 Feb 2021 01:34:55 GMT
       etag:
-      - '"0x8D8849A3060BB5D"'
+      - '"0x8D8D4768F8BA34F"'
       last-modified:
-      - Mon, 09 Nov 2020 10:28:24 GMT
+      - Fri, 19 Feb 2021 01:34:55 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -323,12 +343,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -n --connection-string
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Mon, 09 Nov 2020 10:28:25 GMT
+      - Fri, 19 Feb 2021 01:34:55 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -340,11 +364,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 09 Nov 2020 10:28:25 GMT
+      - Fri, 19 Feb 2021 01:34:56 GMT
       etag:
-      - '"0x8D8849A3060BB5D"'
+      - '"0x8D8D4768F8BA34F"'
       last-modified:
-      - Mon, 09 Nov 2020 10:28:24 GMT
+      - Fri, 19 Feb 2021 01:34:55 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-public-access:
@@ -373,14 +397,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs create
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -n --public-access --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Mon, 09 Nov 2020 10:28:26 GMT
+      - Fri, 19 Feb 2021 01:34:56 GMT
       x-ms-version:
       - '2020-02-10'
     method: PUT
@@ -392,11 +420,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 09 Nov 2020 10:28:26 GMT
+      - Fri, 19 Feb 2021 01:34:56 GMT
       etag:
-      - '"0x8D8849A324205B7"'
+      - '"0x8D8D47690CA246E"'
       last-modified:
-      - Mon, 09 Nov 2020 10:28:27 GMT
+      - Fri, 19 Feb 2021 01:34:57 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -411,12 +439,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -n --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Mon, 09 Nov 2020 10:28:28 GMT
+      - Fri, 19 Feb 2021 01:34:57 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -428,11 +460,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 09 Nov 2020 10:28:28 GMT
+      - Fri, 19 Feb 2021 01:34:57 GMT
       etag:
-      - '"0x8D8849A324205B7"'
+      - '"0x8D8D47690CA246E"'
       last-modified:
-      - Mon, 09 Nov 2020 10:28:27 GMT
+      - Fri, 19 Feb 2021 01:34:57 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-default-encryption-scope:
@@ -459,12 +491,16 @@ interactions:
       - application/xml
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs list
       Connection:
       - keep-alive
+      ParameterSetName:
+      - --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.6.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.6.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Mon, 09 Nov 2020 10:28:29 GMT
+      - Fri, 19 Feb 2021 01:34:58 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -472,16 +508,16 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><EnumerationResults
-        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\"><Containers><Container><Name>filesystem000005</Name><Properties><Last-Modified>Mon,
-        09 Nov 2020 10:28:27 GMT</Last-Modified><Etag>\"0x8D8849A324205B7\"</Etag><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><DefaultEncryptionScope>$account-encryption-key</DefaultEncryptionScope><DenyEncryptionScopeOverride>false</DenyEncryptionScopeOverride><HasImmutabilityPolicy>false</HasImmutabilityPolicy><HasLegalHold>false</HasLegalHold></Properties></Container><Container><Name>filesystem000003</Name><Properties><Last-Modified>Mon,
-        09 Nov 2020 10:28:19 GMT</Last-Modified><Etag>\"0x8D8849A2D838D4B\"</Etag><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><PublicAccess>blob</PublicAccess><DefaultEncryptionScope>$account-encryption-key</DefaultEncryptionScope><DenyEncryptionScopeOverride>false</DenyEncryptionScopeOverride><HasImmutabilityPolicy>false</HasImmutabilityPolicy><HasLegalHold>false</HasLegalHold></Properties></Container><Container><Name>filesystem000004</Name><Properties><Last-Modified>Mon,
-        09 Nov 2020 10:28:24 GMT</Last-Modified><Etag>\"0x8D8849A3060BB5D\"</Etag><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><PublicAccess>container</PublicAccess><DefaultEncryptionScope>$account-encryption-key</DefaultEncryptionScope><DenyEncryptionScopeOverride>false</DenyEncryptionScopeOverride><HasImmutabilityPolicy>false</HasImmutabilityPolicy><HasLegalHold>false</HasLegalHold></Properties></Container></Containers><NextMarker
+        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\"><Containers><Container><Name>filesystem000003</Name><Properties><Last-Modified>Fri,
+        19 Feb 2021 01:34:51 GMT</Last-Modified><Etag>\"0x8D8D4768D8A8DB1\"</Etag><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><PublicAccess>blob</PublicAccess><DefaultEncryptionScope>$account-encryption-key</DefaultEncryptionScope><DenyEncryptionScopeOverride>false</DenyEncryptionScopeOverride><HasImmutabilityPolicy>false</HasImmutabilityPolicy><HasLegalHold>false</HasLegalHold></Properties></Container><Container><Name>filesystem000004</Name><Properties><Last-Modified>Fri,
+        19 Feb 2021 01:34:55 GMT</Last-Modified><Etag>\"0x8D8D4768F8BA34F\"</Etag><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><PublicAccess>container</PublicAccess><DefaultEncryptionScope>$account-encryption-key</DefaultEncryptionScope><DenyEncryptionScopeOverride>false</DenyEncryptionScopeOverride><HasImmutabilityPolicy>false</HasImmutabilityPolicy><HasLegalHold>false</HasLegalHold></Properties></Container><Container><Name>filesystem000005</Name><Properties><Last-Modified>Fri,
+        19 Feb 2021 01:34:57 GMT</Last-Modified><Etag>\"0x8D8D47690CA246E\"</Etag><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><DefaultEncryptionScope>$account-encryption-key</DefaultEncryptionScope><DenyEncryptionScopeOverride>false</DenyEncryptionScopeOverride><HasImmutabilityPolicy>false</HasImmutabilityPolicy><HasLegalHold>false</HasLegalHold></Properties></Container></Containers><NextMarker
         /></EnumerationResults>"
     headers:
       content-type:
       - application/xml
       date:
-      - Mon, 09 Nov 2020 10:28:30 GMT
+      - Fri, 19 Feb 2021 01:34:58 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -498,14 +534,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs delete
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -n -y --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Mon, 09 Nov 2020 10:28:31 GMT
+      - Fri, 19 Feb 2021 01:34:59 GMT
       x-ms-version:
       - '2020-02-10'
     method: DELETE
@@ -517,7 +557,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 09 Nov 2020 10:28:31 GMT
+      - Fri, 19 Feb 2021 01:35:00 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -532,14 +572,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs delete
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -n -y --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Mon, 09 Nov 2020 10:28:33 GMT
+      - Fri, 19 Feb 2021 01:35:00 GMT
       x-ms-version:
       - '2020-02-10'
     method: DELETE
@@ -551,7 +595,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 09 Nov 2020 10:28:33 GMT
+      - Fri, 19 Feb 2021 01:35:00 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -566,14 +610,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs delete
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -n -y --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Mon, 09 Nov 2020 10:28:34 GMT
+      - Fri, 19 Feb 2021 01:35:01 GMT
       x-ms-version:
       - '2020-02-10'
     method: DELETE
@@ -585,7 +633,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 09 Nov 2020 10:28:35 GMT
+      - Fri, 19 Feb 2021 01:35:01 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
