--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_metadata_scenarios.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_metadata_scenarios.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.14.0 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Fri, 06 Nov 2020 10:21:33 GMT
+      - Fri, 19 Feb 2021 01:33:07 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11992'
+      - '11998'
     status:
       code: 200
       message: OK
@@ -56,14 +56,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs create
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -n --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:21:33 GMT
+      - Fri, 19 Feb 2021 01:33:07 GMT
       x-ms-version:
       - '2020-02-10'
     method: PUT
@@ -75,11 +79,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:21:37 GMT
+      - Fri, 19 Feb 2021 01:33:08 GMT
       etag:
-      - '"0x8D8823DBF441CCA"'
+      - '"0x8D8D476503E883B"'
       last-modified:
-      - Fri, 06 Nov 2020 10:21:38 GMT
+      - Fri, 19 Feb 2021 01:33:09 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -94,14 +98,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs metadata update
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -n --metadata --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:21:39 GMT
+      - Fri, 19 Feb 2021 01:33:09 GMT
       x-ms-meta-a:
       - b
       x-ms-meta-c:
@@ -117,11 +125,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:21:41 GMT
+      - Fri, 19 Feb 2021 01:33:09 GMT
       etag:
-      - '"0x8D8823DC157D7A7"'
+      - '"0x8D8D47650E49C29"'
       last-modified:
-      - Fri, 06 Nov 2020 10:21:42 GMT
+      - Fri, 19 Feb 2021 01:33:10 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -136,12 +144,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs metadata show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -n --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:21:42 GMT
+      - Fri, 19 Feb 2021 01:33:10 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -153,11 +165,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:21:44 GMT
+      - Fri, 19 Feb 2021 01:33:10 GMT
       etag:
-      - '"0x8D8823DC157D7A7"'
+      - '"0x8D8D47650E49C29"'
       last-modified:
-      - Fri, 06 Nov 2020 10:21:42 GMT
+      - Fri, 19 Feb 2021 01:33:10 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-default-encryption-scope:
@@ -188,14 +200,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs directory create
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -n -f --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:21:46 GMT
+      - Fri, 19 Feb 2021 01:33:11 GMT
       x-ms-properties:
       - ''
       x-ms-version:
@@ -209,11 +225,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:21:48 GMT
+      - Fri, 19 Feb 2021 01:33:11 GMT
       etag:
-      - '"0x8D8823DC5ABBEC8"'
+      - '"0x8D8D476524DEC58"'
       last-modified:
-      - Fri, 06 Nov 2020 10:21:49 GMT
+      - Fri, 19 Feb 2021 01:33:12 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -228,14 +244,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs directory metadata update
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -n -f --metadata --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:21:49 GMT
+      - Fri, 19 Feb 2021 01:33:12 GMT
       x-ms-meta-foo:
       - bar
       x-ms-meta-moo:
@@ -251,11 +271,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:21:52 GMT
+      - Fri, 19 Feb 2021 01:33:13 GMT
       etag:
-      - '"0x8D8823DC7D48B5D"'
+      - '"0x8D8D47652E93E3B"'
       last-modified:
-      - Fri, 06 Nov 2020 10:21:53 GMT
+      - Fri, 19 Feb 2021 01:33:13 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -272,12 +292,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs directory metadata show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -n -f --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:21:53 GMT
+      - Fri, 19 Feb 2021 01:33:13 GMT
       x-ms-version:
       - '2020-02-10'
     method: HEAD
@@ -293,11 +317,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 10:21:56 GMT
+      - Fri, 19 Feb 2021 01:33:14 GMT
       etag:
-      - '"0x8D8823DC7D48B5D"'
+      - '"0x8D8D47652E93E3B"'
       last-modified:
-      - Fri, 06 Nov 2020 10:21:53 GMT
+      - Fri, 19 Feb 2021 01:33:13 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -307,7 +331,7 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 10:21:49 GMT
+      - Fri, 19 Feb 2021 01:33:12 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -332,14 +356,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs file create
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -p -f --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:21:56 GMT
+      - Fri, 19 Feb 2021 01:33:14 GMT
       x-ms-properties:
       - ''
       x-ms-version:
@@ -353,11 +381,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:21:59 GMT
+      - Fri, 19 Feb 2021 01:33:15 GMT
       etag:
-      - '"0x8D8823DCBFE9068"'
+      - '"0x8D8D47654401546"'
       last-modified:
-      - Fri, 06 Nov 2020 10:21:59 GMT
+      - Fri, 19 Feb 2021 01:33:15 GMT
       server:
       - Windows-Azure-HDFS/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -372,14 +400,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs file metadata update
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -p -f --metadata --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:22:00 GMT
+      - Fri, 19 Feb 2021 01:33:15 GMT
       x-ms-meta-cat:
       - file
       x-ms-meta-test:
@@ -395,11 +427,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:22:02 GMT
+      - Fri, 19 Feb 2021 01:33:16 GMT
       etag:
-      - '"0x8D8823DCE1D6AA3"'
+      - '"0x8D8D47654DF0836"'
       last-modified:
-      - Fri, 06 Nov 2020 10:22:03 GMT
+      - Fri, 19 Feb 2021 01:33:16 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -416,12 +448,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage fs file metadata show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -p -f --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-dfs/12.2.0b1 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:22:03 GMT
+      - Fri, 19 Feb 2021 01:33:16 GMT
       x-ms-version:
       - '2020-02-10'
     method: HEAD
@@ -437,11 +473,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 10:22:06 GMT
+      - Fri, 19 Feb 2021 01:33:16 GMT
       etag:
-      - '"0x8D8823DCE1D6AA3"'
+      - '"0x8D8D47654DF0836"'
       last-modified:
-      - Fri, 06 Nov 2020 10:22:03 GMT
+      - Fri, 19 Feb 2021 01:33:16 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
@@ -451,7 +487,7 @@ interactions:
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 10:21:59 GMT
+      - Fri, 19 Feb 2021 01:33:15 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
