--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_lease_oauth.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_lease_oauth.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.14.0 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Fri, 06 Nov 2020 11:12:09 GMT
+      - Fri, 19 Feb 2021 01:37:24 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11990'
+      - '11994'
     status:
       code: 200
       message: OK
@@ -57,9 +57,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 11:12:10 GMT
+      - Fri, 19 Feb 2021 01:37:25 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -71,11 +71,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 11:12:17 GMT
+      - Fri, 19 Feb 2021 01:37:27 GMT
       etag:
-      - '"0x8D88244D34B7A21"'
+      - '"0x8D8D476EABDEF5B"'
       last-modified:
-      - Fri, 06 Nov 2020 11:12:18 GMT
+      - Fri, 19 Feb 2021 01:37:28 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -91,11 +91,11 @@ interactions:
       Content-Length:
       - '131072'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Fri, 06 Nov 2020 11:12:19 GMT
+      - Fri, 19 Feb 2021 01:37:29 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -109,11 +109,11 @@ interactions:
       content-md5:
       - DfvoqkwgtS4bi/PLbL3xkw==
       date:
-      - Fri, 06 Nov 2020 11:12:25 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       etag:
-      - '"0x8D88244D7D0D672"'
+      - '"0x8D8D476EC971EDD"'
       last-modified:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -130,14 +130,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob lease acquire
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - --lease-duration -b -c --account-name --proposed-lease-id -o --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       x-ms-lease-action:
       - acquire
       x-ms-lease-duration:
@@ -155,11 +159,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 11:12:32 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       etag:
-      - '"0x8D88244D7D0D672"'
+      - '"0x8D8D476EC971EDD"'
       last-modified:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-lease-id:
@@ -176,12 +180,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -n -c --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:12:33 GMT
+      - Fri, 19 Feb 2021 01:37:32 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -199,17 +207,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 11:12:41 GMT
+      - Fri, 19 Feb 2021 01:37:33 GMT
       etag:
-      - '"0x8D88244D7D0D672"'
+      - '"0x8D8D476EC971EDD"'
       last-modified:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       x-ms-lease-duration:
       - fixed
       x-ms-lease-state:
@@ -230,14 +238,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob lease change
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -b -c --lease-id --proposed-lease-id --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:12:41 GMT
+      - Fri, 19 Feb 2021 01:37:33 GMT
       x-ms-lease-action:
       - change
       x-ms-lease-id:
@@ -255,11 +267,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 11:12:48 GMT
+      - Fri, 19 Feb 2021 01:37:34 GMT
       etag:
-      - '"0x8D88244D7D0D672"'
+      - '"0x8D8D476EC971EDD"'
       last-modified:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-lease-id:
@@ -276,14 +288,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob lease renew
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -b -c --lease-id --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:12:48 GMT
+      - Fri, 19 Feb 2021 01:37:34 GMT
       x-ms-lease-action:
       - renew
       x-ms-lease-id:
@@ -299,11 +315,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 11:12:55 GMT
+      - Fri, 19 Feb 2021 01:37:35 GMT
       etag:
-      - '"0x8D88244D7D0D672"'
+      - '"0x8D8D476EC971EDD"'
       last-modified:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-lease-id:
@@ -320,12 +336,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -n -c --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:12:58 GMT
+      - Fri, 19 Feb 2021 01:37:35 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -343,17 +363,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 11:13:05 GMT
+      - Fri, 19 Feb 2021 01:37:36 GMT
       etag:
-      - '"0x8D88244D7D0D672"'
+      - '"0x8D8D476EC971EDD"'
       last-modified:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       x-ms-lease-duration:
       - fixed
       x-ms-lease-state:
@@ -374,14 +394,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob lease break
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -b -c --lease-break-period --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:13:06 GMT
+      - Fri, 19 Feb 2021 01:37:37 GMT
       x-ms-lease-action:
       - break
       x-ms-lease-break-period:
@@ -397,11 +421,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 11:13:13 GMT
+      - Fri, 19 Feb 2021 01:37:37 GMT
       etag:
-      - '"0x8D88244D7D0D672"'
+      - '"0x8D8D476EC971EDD"'
       last-modified:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-lease-time:
@@ -418,12 +442,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -n -c --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:13:14 GMT
+      - Fri, 19 Feb 2021 01:37:38 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -441,17 +469,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 11:13:21 GMT
+      - Fri, 19 Feb 2021 01:37:38 GMT
       etag:
-      - '"0x8D88244D7D0D672"'
+      - '"0x8D8D476EC971EDD"'
       last-modified:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       x-ms-lease-state:
       - breaking
       x-ms-lease-status:
@@ -470,14 +498,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob lease release
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -b -c --lease-id --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:13:22 GMT
+      - Fri, 19 Feb 2021 01:37:39 GMT
       x-ms-lease-action:
       - release
       x-ms-lease-id:
@@ -493,11 +525,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 11:13:29 GMT
+      - Fri, 19 Feb 2021 01:37:39 GMT
       etag:
-      - '"0x8D88244D7D0D672"'
+      - '"0x8D8D476EC971EDD"'
       last-modified:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -512,12 +544,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -n -c --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:13:29 GMT
+      - Fri, 19 Feb 2021 01:37:40 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -535,17 +571,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 11:13:36 GMT
+      - Fri, 19 Feb 2021 01:37:40 GMT
       etag:
-      - '"0x8D88244D7D0D672"'
+      - '"0x8D8D476EC971EDD"'
       last-modified:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 11:12:26 GMT
+      - Fri, 19 Feb 2021 01:37:31 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
