--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_soft_delete.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_soft_delete.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.14.0 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Fri, 06 Nov 2020 10:39:33 GMT
+      - Fri, 19 Feb 2021 01:34:47 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11991'
+      - '11995'
     status:
       code: 200
       message: OK
@@ -57,9 +57,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:39:33 GMT
+      - Fri, 19 Feb 2021 01:34:47 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -71,11 +71,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:39:40 GMT
+      - Fri, 19 Feb 2021 01:34:50 GMT
       etag:
-      - '"0x8D88240447DA1EE"'
+      - '"0x8D8D4768CB3229C"'
       last-modified:
-      - Fri, 06 Nov 2020 10:39:41 GMT
+      - Fri, 19 Feb 2021 01:34:50 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -91,11 +91,11 @@ interactions:
       Content-Length:
       - '1024'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Fri, 06 Nov 2020 10:39:41 GMT
+      - Fri, 19 Feb 2021 01:34:50 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -109,11 +109,11 @@ interactions:
       content-md5:
       - DzQ7CTESaiDxM9Z8KwGKOw==
       date:
-      - Fri, 06 Nov 2020 10:39:46 GMT
+      - Fri, 19 Feb 2021 01:34:51 GMT
       etag:
-      - '"0x8D8824047F421F3"'
+      - '"0x8D8D4768D588DCF"'
       last-modified:
-      - Fri, 06 Nov 2020 10:39:46 GMT
+      - Fri, 19 Feb 2021 01:34:51 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -130,12 +130,16 @@ interactions:
       - application/xml
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob list
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:39:47 GMT
+      - Fri, 19 Feb 2021 01:34:51 GMT
       x-ms-version:
       - '2019-12-12'
     method: GET
@@ -144,8 +148,8 @@ interactions:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><EnumerationResults
         ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Fri,
-        06 Nov 2020 10:39:46 GMT</Creation-Time><Last-Modified>Fri, 06 Nov 2020 10:39:46
-        GMT</Last-Modified><Etag>0x8D8824047F421F3</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
+        19 Feb 2021 01:34:51 GMT</Creation-Time><Last-Modified>Fri, 19 Feb 2021 01:34:51
+        GMT</Last-Modified><Etag>0x8D8D4768D588DCF</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
         /><Content-Language /><Content-CRC64 /><Content-MD5>DzQ7CTESaiDxM9Z8KwGKOw==</Content-MD5><Cache-Control
         /><Content-Disposition /><BlobType>BlockBlob</BlobType><AccessTier>Hot</AccessTier><AccessTierInferred>true</AccessTierInferred><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><ServerEncrypted>true</ServerEncrypted></Properties><OrMetadata
         /></Blob></Blobs><NextMarker /></EnumerationResults>"
@@ -153,7 +157,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Fri, 06 Nov 2020 10:39:52 GMT
+      - Fri, 19 Feb 2021 01:34:51 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -169,9 +173,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:39:53 GMT
+      - Fri, 19 Feb 2021 01:34:52 GMT
       x-ms-version:
       - '2018-11-09'
     method: GET
@@ -184,7 +188,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Fri, 06 Nov 2020 10:39:58 GMT
+      - Fri, 19 Feb 2021 01:34:53 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -204,9 +208,9 @@ interactions:
       Content-Length:
       - '176'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:39:58 GMT
+      - Fri, 19 Feb 2021 01:34:53 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -218,7 +222,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:40:02 GMT
+      - Fri, 19 Feb 2021 01:34:53 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -232,9 +236,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:40:03 GMT
+      - Fri, 19 Feb 2021 01:34:54 GMT
       x-ms-version:
       - '2018-11-09'
     method: GET
@@ -247,7 +251,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Fri, 06 Nov 2020 10:40:04 GMT
+      - Fri, 19 Feb 2021 01:34:53 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -263,9 +267,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:40:05 GMT
+      - Fri, 19 Feb 2021 01:34:54 GMT
       x-ms-version:
       - '2018-11-09'
     method: GET
@@ -278,7 +282,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Fri, 06 Nov 2020 10:40:10 GMT
+      - Fri, 19 Feb 2021 01:34:54 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -296,9 +300,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:40:21 GMT
+      - Fri, 19 Feb 2021 01:35:05 GMT
       x-ms-version:
       - '2018-11-09'
     method: DELETE
@@ -310,7 +314,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:40:26 GMT
+      - Fri, 19 Feb 2021 01:35:06 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-delete-type-permanent:
@@ -327,12 +331,16 @@ interactions:
       - application/xml
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob list
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:40:27 GMT
+      - Fri, 19 Feb 2021 01:35:06 GMT
       x-ms-version:
       - '2019-12-12'
     method: GET
@@ -346,7 +354,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Fri, 06 Nov 2020 10:40:32 GMT
+      - Fri, 19 Feb 2021 01:35:06 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -363,12 +371,16 @@ interactions:
       - application/xml
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob list
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c --include --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:41:03 GMT
+      - Fri, 19 Feb 2021 01:35:37 GMT
       x-ms-version:
       - '2019-12-12'
     method: GET
@@ -377,17 +389,17 @@ interactions:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><EnumerationResults
         ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Deleted>true</Deleted><Properties><Creation-Time>Fri,
-        06 Nov 2020 10:39:46 GMT</Creation-Time><Last-Modified>Fri, 06 Nov 2020 10:39:46
-        GMT</Last-Modified><Etag>0x8D8824047F421F3</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
+        19 Feb 2021 01:34:51 GMT</Creation-Time><Last-Modified>Fri, 19 Feb 2021 01:34:51
+        GMT</Last-Modified><Etag>0x8D8D4768D588DCF</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
         /><Content-Language /><Content-CRC64 /><Content-MD5>DzQ7CTESaiDxM9Z8KwGKOw==</Content-MD5><Cache-Control
         /><Content-Disposition /><BlobType>BlockBlob</BlobType><AccessTier>Hot</AccessTier><AccessTierInferred>true</AccessTierInferred><ServerEncrypted>true</ServerEncrypted><DeletedTime>Fri,
-        06 Nov 2020 10:40:27 GMT</DeletedTime><RemainingRetentionDays>1</RemainingRetentionDays></Properties><OrMetadata
+        19 Feb 2021 01:35:06 GMT</DeletedTime><RemainingRetentionDays>1</RemainingRetentionDays></Properties><OrMetadata
         /></Blob></Blobs><NextMarker /></EnumerationResults>"
     headers:
       content-type:
       - application/xml
       date:
-      - Fri, 06 Nov 2020 10:41:09 GMT
+      - Fri, 19 Feb 2021 01:35:38 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -405,9 +417,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:41:09 GMT
+      - Fri, 19 Feb 2021 01:35:38 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -419,7 +431,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:41:15 GMT
+      - Fri, 19 Feb 2021 01:35:39 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -434,12 +446,16 @@ interactions:
       - application/xml
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob list
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:41:18 GMT
+      - Fri, 19 Feb 2021 01:35:39 GMT
       x-ms-version:
       - '2019-12-12'
     method: GET
@@ -448,8 +464,8 @@ interactions:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><EnumerationResults
         ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Fri,
-        06 Nov 2020 10:39:46 GMT</Creation-Time><Last-Modified>Fri, 06 Nov 2020 10:39:46
-        GMT</Last-Modified><Etag>0x8D8824047F421F3</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
+        19 Feb 2021 01:34:51 GMT</Creation-Time><Last-Modified>Fri, 19 Feb 2021 01:34:51
+        GMT</Last-Modified><Etag>0x8D8D4768D588DCF</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
         /><Content-Language /><Content-CRC64 /><Content-MD5>DzQ7CTESaiDxM9Z8KwGKOw==</Content-MD5><Cache-Control
         /><Content-Disposition /><BlobType>BlockBlob</BlobType><AccessTier>Hot</AccessTier><AccessTierInferred>true</AccessTierInferred><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><ServerEncrypted>true</ServerEncrypted></Properties><OrMetadata
         /></Blob></Blobs><NextMarker /></EnumerationResults>"
@@ -457,7 +473,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Fri, 06 Nov 2020 10:41:23 GMT
+      - Fri, 19 Feb 2021 01:35:40 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
