--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_suppress_400.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_suppress_400.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.14.0 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Fri, 06 Nov 2020 10:42:22 GMT
+      - Fri, 19 Feb 2021 01:34:48 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11990'
+      - '11995'
     status:
       code: 200
       message: OK
@@ -56,12 +56,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:42:23 GMT
+      - Fri, 19 Feb 2021 01:34:48 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -71,7 +75,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Fri, 06 Nov 2020 10:42:30 GMT
+      - Fri, 19 Feb 2021 01:34:50 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -90,12 +94,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - --account-name --account-key -c -n
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:42:31 GMT
+      - Fri, 19 Feb 2021 01:34:51 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -105,7 +113,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Fri, 06 Nov 2020 10:42:36 GMT
+      - Fri, 19 Feb 2021 01:34:51 GMT
       server:
       - Microsoft-HTTPAPI/2.0
       transfer-encoding:
